--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,4 +4,10 @@
 
 {% block content %}
   <h1>Index</h1>
+  {% if user.is_authenticated %}
+    Hi {{ user.username }}!
+  {% else %}
+    <p>You are not logged in</p>
+    <a href="{% url 'login' %}">Log In</a>
+  {% endif %}
 {% endblock %}
