--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -9,4 +9,5 @@
     {{ form.as_p }}
     <button type="submit">Log In</button>
   </form>
+  <p><a href="{% url 'main:index' %}">Cancel</a></p>
 {% endblock content %}
