--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,5 +9,5 @@
     {{ form.as_p }}
     <button type="submit">Log In</button>
   </form>
-  <p><a href="{% url 'main:index' %}">Cancel</a></p>
+  <p><a href="{% url 'main:home' %}">Cancel</a></p>
 {% endblock content %}
