Add section about Django-Skeleton to home page.

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -3,7 +3,19 @@
 {% block title %} Site Name {% endblock %}
 
 {% block content %}
-  <h1>Site Name - UNDER CONSTRUCTION</h1>
+  <!-- When setting up a new project, delete this block -->
+  <h1>DJANGO SKELETON</h1>
+    <p>
+      <i>"A Django project starter template preconfigured with bare bones functionality."</i>
+      <br><br>
+      Learn more at the project <a href="https://github.com/fiofury1/django-skeleton">GitHub repo</a>.
+      <br><br>
+      Begin template...
+    </p>
+  <hr>
+  <!-- End delete -->
+
+  <h1>SITE NAME</h1>
   {% if user.is_authenticated %}
     <p>User: {{ user.username }}</p>
     <p>Site content here.</p>
