Update Github repo link to open in a new tab.

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -8,7 +8,7 @@
     <p>
       <i>"A Django project starter template preconfigured with bare bones functionality."</i>
       <br><br>
-      Learn more at the project <a href="https://github.com/fiofury1/django-skeleton">GitHub repo</a>.
+      Learn more at the project <a href="https://github.com/fiofury1/django-skeleton" target="_blank"  rel="noreferrer noopener">GitHub repo</a>.
       <br><br>
       Begin template...
     </p>
