--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -7,7 +7,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Log In</button>
+    <button type="submit">Sign Up</button>
   </form>
   <p><a href="{% url 'main:home' %}">Cancel</a></p>
 {% endblock content %}
