Initial commit as Dockerized app.

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -4,9 +4,9 @@
 
 {% block content %}
   <!-- When setting up a new project, delete this block -->
-  <h1>DJANGO SKELETON</h1>
+  <h1>DJANGO SKELETON - DOCKER</h1>
     <p>
-      <i>"A Django project starter template preconfigured with bare bones functionality."</i>
+      <i><a href="https://github.com/fiofury1/django-skeleton" target="_blank"  rel="noreferrer noopener">Django-Skeleton</a> "Dockerized".</i>
       <br><br>
       Learn more at the project <a href="https://github.com/fiofury1/django-skeleton" target="_blank"  rel="noreferrer noopener">GitHub repo</a>.
       <br><br>
