--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -6,9 +6,10 @@
   <!-- When setting up a new project, delete this block -->
   <h1>DJANGO SKELETON - DOCKER</h1>
     <p>
-      <i><a href="https://github.com/fiofury1/django-skeleton" target="_blank"  rel="noreferrer noopener">Django-Skeleton</a> "Dockerized".</i>
+      <i>A "Dockerized" version of the 
+        <a href="https://github.com/fiofury1/django-skeleton" target="_blank"  rel="noreferrer noopener">Django-Skeleton</a> repo.</i>
       <br><br>
-      Learn more at the project <a href="https://github.com/fiofury1/django-skeleton" target="_blank"  rel="noreferrer noopener">GitHub repo</a>.
+      Learn more at the project <a href="https://github.com/fiofury1/django-skeleton-docker" target="_blank"  rel="noreferrer noopener">GitHub repo</a>.
       <br><br>
       Begin template...
     </p>
